# BDAI_DataAutomationHandling

./: .gitignore  README.md  process.md  pyproject.toml  study.md
gharchive/: 00_setup.ipynb  01_extract_daily_agg.ipynb  client.py  extract.py  transform.py
